--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,6 +1,26 @@
 <h1> 
-hello world 
+
+<h1> <img class="company-logo"
+    src="https://public.3.basecamp.com/p/iahgNshn1oKq98sWGf1q89Vo/uploads/511042491/download/CodeNow%20Logo.png"></img>Workshop Todo List 
+    <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"></h1>
+   
+   <ul>
+    <li> <input type="checkbox"><a href="show.html">Make the curriculum  <span class="pomodoro-estimate">4 pomodoros</span> </a></li>
+    <li class="completed to do"
+    <li> <input type="checkbox"> buy workshop supplies</li> 
+     <li><input type="checkbox"> order food for sat.  </li>
+      <li><input type="checkbox"> check pre-work assign. </li>
+       <li><input type="checkbox"> send workshop location to all students </li>
+        <li><input type="checkbox">  have a great workshop <span class="pomodoro-estimate">0 pomodors</span> </li> 
+        
+        </ul>
+ 
+   <p> <input type="text"> </p>
+    <p> <input type="number" > </p>
+    
+    <input id="add-new-todo-button" type="submit" value="add todo">
 </h1>
+
 
     
     
