add show action

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -5,13 +5,13 @@
     <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"></h1>
    
    <ul>
-    <li> <input type="checkbox"><a href="show.html">Make the curriculum  <span class="pomodoro-estimate">4 pomodoros</span> </a></li>
+    <li> <input type="checkbox"><a href="show.html">Take care of baby  <span class="pomodoro-estimate"><%= 1+3 %> pomodoros</span> </a></li>
     <li class="completed to do"
-    <li> <input type="checkbox"> buy workshop supplies</li> 
-     <li><input type="checkbox"> order food for sat.  </li>
+    <li> <input type="checkbox"> Do Homework </li> 
+     <li><input type="checkbox"> order food  </li>
       <li><input type="checkbox"> check pre-work assign. </li>
-       <li><input type="checkbox"> send workshop location to all students </li>
-        <li><input type="checkbox">  have a great workshop <span class="pomodoro-estimate">0 pomodors</span> </li> 
+       <li><input type="checkbox"> send homework to teachers </li>
+        <li><input type="checkbox">  have a great day <span class="pomodoro-estimate">0 pomodors</span> </li> 
         
         </ul>
  
