--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,8 +1,10 @@
 <h1> 
 <input type="checkbox">
- <h2>  Make the curriculm 4 pomos  
+ <h2><%= @todo_description %>
  </h2>
+<span class= "pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> pomodoros</span>
 <a href="#">Edit</a>
 <a href="#">Delete</a>
 <a href="index.html">Go back...</a>
+
 </h1>
