--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -4,14 +4,14 @@
     src="https://public.3.basecamp.com/p/iahgNshn1oKq98sWGf1q89Vo/uploads/511042491/download/CodeNow%20Logo.png"></img>Workshop Todo List 
     <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"></h1>
    
-   <ul>
-    <li> <input type="checkbox"><a href="show.html">Take care of baby  <span class="pomodoro-estimate"><%= 1+3 %> pomodoros</span> </a></li>
+    <ul>
+    <li> <input type="checkbox"><a href="show.html">Make the curriculum  <span class="pomodoro-estimate">4 pomodoros</span> <a href="show.html"</li>
     <li class="completed to do"
-    <li> <input type="checkbox"> Do Homework </li> 
-     <li><input type="checkbox"> order food  </li>
-      <li><input type="checkbox"> check pre-work assign. </li>
-       <li><input type="checkbox"> send homework to teachers </li>
-        <li><input type="checkbox">  have a great day <span class="pomodoro-estimate">0 pomodors</span> </li> 
+    <li> <input type="checkbox"><a href="show.html">buy workshop supplies</a></li> 
+     <li><input type="checkbox"><a href="show.html">order food for sat</a>  </li>
+      <li><input type="checkbox"><a href="show.html">check pre-work assign </a> </li>
+       <li><input type="checkbox"><a href="show.html">send workshop location to all students </a></li>
+        <li><input type="checkbox"><a href="show.html"  have a great workshop <span class="pomodoro-estimate">0 pomodors</span> </a> </li> 
         
         </ul>
  
