add links to todo's on index page

--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -5,13 +5,13 @@
     <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet"></h1>
    
     <ul>
-    <li> <input type="checkbox"><a href="show.html">Make the curriculum  <span class="pomodoro-estimate">4 pomodoros</span> <a href="show.html"</li>
+    <li> <input type="checkbox"><a href="show/1">Make the curriculum  <span class="pomodoro-estimate">4 pomodoros</span> <a href="show.html"</li>
     <li class="completed to do"
-    <li> <input type="checkbox"><a href="show.html">buy workshop supplies</a></li> 
-     <li><input type="checkbox"><a href="show.html">order food for sat</a>  </li>
-      <li><input type="checkbox"><a href="show.html">check pre-work assign </a> </li>
-       <li><input type="checkbox"><a href="show.html">send workshop location to all students </a></li>
-        <li><input type="checkbox"><a href="show.html"  have a great workshop <span class="pomodoro-estimate">0 pomodors</span> </a> </li> 
+    <li> <input type="checkbox"><a href="show/2">buy workshop supplies</a></li> 
+     <li><input type="checkbox"><a href="show/3">order food for sat</a>  </li>
+      <li><input type="checkbox"><a href="show/4">check pre-work assign </a> </li>
+       <li><input type="checkbox"><a href="show/5">send workshop location to all students </a></li>
+        <li><input type="checkbox"><a href="show/6">have a great workshop <span class="pomodoro-estimate">0 pomodors</span> </a> </li> 
         
         </ul>
  
