--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,8 +1,8 @@
 <h1> 
 <input type="checkbox">
- <h2><%= @todo_description %>
+ <h2><%= @todo.description %>
  </h2>
-<span class= "pomodoro-estimate large-pomodoro-estimate"><%= @todo_pomodoro_estimate %> pomodoros</span>
+<span class= "pomodoro-estimate large-pomodoro-estimate"><%= @todo.pomodoro_estimate %> pomodoros</span>
 <h3>Todo #<%= params[:id] %></h3>
 <a href="#">Edit</a>
 <a href="#">Delete</a>
