--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -4,8 +4,8 @@
  </h2>
 <span class= "pomodoro-estimate large-pomodoro-estimate"><%= @todo.pomodoro_estimate %> pomodoros</span>
 <h3>Todo #<%= params[:id] %></h3>
-<a href="#">Edit</a>
-<a href="#">Delete</a>
+<a href="/todo/edit/<%= @todo.id %>">Edit</a>
+<a href="/todo/destroy/<%= @todo.id %>">Delete</a>
 <a href="index.html">Go back...</a>
 
 </h1>
